@@ -1074,7 +1074,7 @@ sub cmd_cleanup {
 		[ 'debs'          => \$modes{debs},
 			"Delete .deb (compiled binary package) files." ],
 		[ 'buildlocks|bl' => \$modes{bl},	"Delete stale buildlock packages." ],
-		[ 'obsoletes'     => \$modes{obs},	"Delete obsolete packages." ],
+#		[ 'obsoletes'     => \$modes{obs},	"Delete obsolete packages." ],
 		[ 'keep-src|k'    => \$opts{keep_old},
 			"Move old source files to $basepath/src/old/ instead of deleting them." ],
 		[ 'dry-run|d'     => \$opts{dryrun},
@@ -1082,7 +1082,7 @@ sub cmd_cleanup {
 	], \@_, helpformat => <<FORMAT,
 %intro{[mode(s) and options]}
 One or more of the following modes must be specified:
-%opts{debs,sources,buildlocks,obsoletes}
+%opts{debs,sources,buildlocks}
 
 Options:
 %opts{keep-src,dry-run,help}
@@ -2094,6 +2094,7 @@ FORMAT
 
 		# default to all fields if no fields or %expands specified
 		if ($wantall or not (@fields or @percents)) {
+			# don't list fields that cause indexer exclusion
 			@fields = (qw/
 					   infofile package epoch version revision parent family
 					   status allversions trees
@@ -2123,7 +2124,9 @@ FORMAT
 						   updateconfigguess updateconfigguessindirs
 						   updatelibtool updatelibtoolindirs
 						   updatepomakefile
-						   patch patchscript /,
+						   patch patchscript
+						   patchfile patchfile-md5
+						   /,
 						   $pkg->params_matching("^set"),
 						   $pkg->params_matching("^noset"),
 						   qw/
@@ -2252,8 +2255,8 @@ FORMAT
 					 $_ =~ /^tar\d*filesrename$/ or
 					 $_ =~ /^update(configguess|libtool)indirs$/ or
 					 $_ =~ /^set/ or $_ =~ /^(jar|doc|conf)files$/ or
-					 $_ eq 'patch' or $_ eq 'infodocs' or
-					 $_ =~ /^daemonicname$/
+					 $_ =~ /^patch(|file|file-md5)$/ or
+ 					 $_ eq 'infodocs' or $_ =~ /^daemonicname$/
 					) {
 				# singleline fields start on the same line, have
 				# embedded newlines removed, and are not wrapped
